# encite

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
encite/: __init__.py  ner.py
tests/: test_ner.py
